# celestia

./: Makefile  README.md  pyproject.toml
config/: cpt.yaml  sft.yaml
src/celestia/: __init__.py  cli.py  config.py
src/celestia/data/: __init__.py  builder.py  loader.py  sft.py
src/celestia/export/: __init__.py  gguf.py  hub.py
src/celestia/model/: __init__.py  loader.py  lora.py  merge.py
src/celestia/training/: __init__.py  cpt.py  sft.py
src/celestia/utils/: __init__.py  logging.py  memory.py
